--- a/index.html
+++ b/index.html
@@ -1,12 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<title>my site</title>
+<link href="./style.css" rel="stylesheet" type="text/css">
 </head>
-<body>
-    
+<body scroll="yes">
+  <table border="0">
+    <tr>
+      <td colspan="1" class="header"><h1 class="custom-colored-h1">Akatcuki<img src="./Art/Акатцуки.jpg" width="75px" height="50px"><input type="text"><button>Поиск</button> </h1></td>
+    </tr>
+    <tr>
+        <td class="article"><h1>Акацуки: история группировки</h1> 
+            <p><img src="http://pm1.narvii.com/7526/effed6692c0f865d54bcaf8447b6454e74a31652r1-2048-1726v2_uhq.jpg" width="300px" height="200px" class="rightming">
+                «Акацуки» стало центральным понятием аниме-сериала «Наруто». Организация, собравшая главных антагонистов сюжета, преследовала цель завладеть девятью чудищами, заточенными
+                в телах дзинтюрики. Один из демонов поселился в теле главного героя сериала — Наруто: на фоне борьбы между ним и членами группировки Акацуки разворачивается захватывающая
+                история, полная тайн и необъяснимых явлений. Группа шиноби (ниндзя) возникла за пределами скрытых деревень — десятилетиями она принимала разные формы и контролировалась
+                разными людьми. Организация была основана в период Третьей войны тремя шиноби — Якихо, Конан и Нагато. Три сироты преследовали благую цель — принести в родной край 
+                долгожданный мир и спокойствие. Их активная деятельность привлекла внимание ниндзя за пределами Амегакуре.
+
+            </p>
+            <p> <h1>Внешний вид и одежда Акацуки</h1>
+                Внешний вид Акацуки подчеркивает принадлежность персонажей к организации. Главная особенность одежды членов группировки — плащ Акацуки.
+                Выполненные из черной ткани свободные балахоны с красным декором и высокими воротниками, скрывающими часть лица, стали олицетворением кровавого дождя, падавшего на
+                Амэгакурэ во времена военных действий. Еще одна важнейшая составляющая образов ниндзя — кольца Акацуки. Каждый член организации имеет кольцо, определяющее его 
+                положение на собраниях. На аксессуаре Акацуки Пейна нарисован ноль, у Орочимару – небо, у Какудзу – север, у Сасори – сфера 
+            </p>
+            <p><img src="./Art/Итачи.png" width="300px" height="250px" class="leftming">
+                <h1>Итачи Учиха</h1>
+                Итачи Учиха (яп. うちは イタチ, У́чиха Ита́чи) — шиноби отступник, бывший член Анбу, был гением клана Учиха из Скрытого Листа. В молодости Итачи стал международным
+                преступником, уничтожив весь свой клан, оставив в живых лишь своего младшего брата Саске. Впоследствии Итачи присоединился к международной преступной организации,
+                Акацуки, деятельность которой порой приводила его к конфликтам с ниндзя Листа, включая Саске, стремящегося отомстить за свой клан. После смерти Итачи, выяснилось,
+                что его мотивы были куда более сложными, чем казалось изначально — он верил, что все его действия были направлены на благо Саске и Конохи, и он оставался предан Скрытому Листу до самого конца. 
+            </p>
+            <p><img src="./Art/Дейдара.jpg" width="300px" height="250px" class="rightming">
+                <h1>Дейдара</h1>
+                Дейдара (яп. デイダラ, Дэйда́ра) был ниндзя-отступником S-рангаиз Скрытого Камня. Во время своего пребывания в деревне он был членом Корпуса Подрывников. После ухода из неё Дейдара вынужденно
+                вступил в Акацуки как самый молодой их член. В организации он был партнёром Сасори до тех пор, пока последний не погиб, а позже — напарником Тоби, пока сам не встретил свою смерть.
+            </p>
+         </td>   
+    </tr>
+    <tr>
+        <td colspan="1" class="footer">
+            <a href="https://github.com/parvin21/IT-SCHOOL-WEB-1">Github</a> 
+            <a href="https://vk.com/pbabaeva">Vk</a>
+        </td>
+    </tr>
+  </table>
 </body>
 </html>
