added pictures and text

--- a/Public/project.html
+++ b/Public/project.html
@@ -4,14 +4,79 @@
     <meta charset= "UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device=width, initial-scale=1.0">
-    <title>MYSITE</title>
-    <link rel="stylesheet" href="./Public/index.css" type="text/css">
+    <title>MYFIRSTSITE</title>
+    <link rel="stylesheet" href="./project.css" type="text/css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Oswald&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header>
         <div class="logo">
-            <div>BYZEEVA</div>
+            <a href="https://www.instagram.com/byzeeva/"><img class="graphiclogo" src="mysite.png" alt="logo"></a>
         </div>
     </header>
- 
+    
+    <div>
+       <h1>Ladies and gentleman, checkout my favourite movies and TV shows!</h1>
+    </div>
+    <div class="links">
+        <a href="https://www.kinopoisk.ru/film/804662/">Круэла</a>
+    </div>
+    <div class="links">
+        <a href="https://www.kinopoisk.ru/series/863009/">Миллиарды</a>
+    </div>
+    <div class="links">
+        <a href="https://www.kinopoisk.ru/series/1264562/">Внешние отмели</a>  
+    </div>
+    <div class="links">
+        <a href="https://www.kinopoisk.ru/series/762203/">Древние</a>
+    </div>
+    <div class="links">
+        <a href="https://www.kinopoisk.ru/series/308625/">Сплетница</a>
+    </div>
+    <div class="links">
+        <a href="https://www.kinopoisk.ru/film/594554/">Мир Юрского периода</a>
+        <div class="series_container"> 
+    </div>
+        
+        <div class="series_container">
+            <div class="series">
+                <div class="advantages_item">
+                    <h2>TV SHOWS AND MOVIES</h2>
+                    <p>"Внешние отмели"</p>
+                    <img src="site1.jpg" alt="" height=500px width=800px>
+                <div>
+
+                <div class="advantages_item">
+                    <p>"Миллиарды"</p>
+                    <img src="site3.jpg" alt=""height=500px width=800px>
+                <div>
+
+                <div class="advantages_item">
+                    <p>"Круэла"</p>
+                    <img src="site4.jpg" alt=""height=500px width=800px>
+                <div>
+
+                <div class="advantages_item">
+                    <p>"Сплетница"</p>
+                    <img src="site5.jpg" alt=""height=500px width=800px>
+                <div>
+
+                <div class="advantages_item">
+                    <p>"Древние"</p>
+                    <img src="site6.jpg" alt=""height=500px width=800px>
+                <div>
+
+                <div class="advantages_item">
+                    <p>"Мир Юрского периода"</p>
+                    <img src="site7.jpg" alt=""height=500px width=800px>
+                </div>
+            </div>  
+        </div>
+           <div class="series"></div>
+    </main>
+
+
 </body>
