--- a/index.html
+++ b/index.html
@@ -15,40 +15,47 @@
         </div>
     </header>
     <article>
-        <div>
-            <h1>He said once</h1>
-            <div id="quote">
-                <hr>
-                <q>Can't stop, won't stop!</q>
-                <hr>
+        <div class="content">
+            <div class="text">
+                <h1>He said once</h1>
+                <div id="quote">
+                    <hr>
+                    <q>Can't stop, won't stop!</q>
+                    <hr>
+                </div>
+            <h2>And he didn't stop</h2>
             </div>
-        <h2>And he didn't stop</h2>
-        </div>
-        <div class = "WhiteContent">
-            <div class = "item">
-                <img class = "picture" src="https://www.belta.by/images/storage/news/with_archive/2020/000029_1605623147_416053_big.jpg">
-                <figcaption>"First stage"</figcaption>
+            <div class = "Scroll">
+                <div class = "item">
+                    <img class = "picture" src="https://www.belta.by/images/storage/news/with_archive/2020/000029_1605623147_416053_big.jpg">
+                    <figcaption>"First stage"</figcaption>
+                </div>
+                <div class = "item">
+                    <img class = "picture" src="https://i.ytimg.com/vi/dULhrn9Uyn4/maxresdefault.jpg">
+                    <figcaption>"Second stage"</figcaption>
+                </div>
+                <div class = "item">
+                    <img class = "picture" src="https://cs9.pikabu.ru/post_img/big/2018/05/18/8/1526645688162141385.jpg">
+                    <figcaption>"Third stage"</figcaption>
+                </div>
+                <div class = "item">
+                    <img class = "picture" src="https://cdnn21.img.ria.ru/images/155666/00/1556660022_557:0:2605:2048_1920x0_80_0_0_7f3de1335e13e396924b49bc6a483e45.jpg">
+                    <figcaption>"Fourth stage"</figcaption>
+                </div>
             </div>
-            <div class = "item">
-                <img class = "picture" src="https://i.ytimg.com/vi/dULhrn9Uyn4/maxresdefault.jpg">
-                <figcaption>"Second stage"</figcaption>
-            </div>
-            <div class = "item">
-                <img class = "picture" src="https://cs9.pikabu.ru/post_img/big/2018/05/18/8/1526645688162141385.jpg">
-                <figcaption>"Third stage"</figcaption>
-            </div>
-            <div class = "item">
-                <img class = "picture" src="https://cdnn21.img.ria.ru/images/155666/00/1556660022_557:0:2605:2048_1920x0_80_0_0_7f3de1335e13e396924b49bc6a483e45.jpg">
-                <figcaption>"Fourth stage"</figcaption>
+            <div class="white">
+
             </div>
         </div>
     </article>
     <footer>
-        <a href="https://vk.com/id73186708"><img src="images/VK_Blue_Logo_t-340x340.png" height = 50px></a>
-        &nbsp;
-        <a href="https://instagram.com/bnyc11?r=nametag"><img src="images/2048px-Instagram_icon.png" height = 50px></a>
-        &nbsp;
-        <a href="https://github.com/lieless"><img src="images/GitHub-Mark.png" height = 50px></a>
+        <div class="foot">
+            <a class="icon" href="https://vk.com/id73186708"><img src="images/VK_Blue_Logo_t-340x340.png" height = 50px></a>
+            &nbsp;
+            <a class="icon" href="https://instagram.com/bnyc11?r=nametag"><img src="images/2048px-Instagram_icon.png" height = 50px></a>
+            &nbsp;
+            <a class="icon" href="https://github.com/lieless"><img src="images/GitHub-Mark.png" height = 50px></a>
+        </div>
     </footer>
 </body>
 </html>
