--- a/Public/project.html
+++ b/Public/project.html
@@ -12,6 +12,8 @@
 
 </head>
 <body>
+    <div id="left"></div>
+    <div id="right"></div>
     <header>
         <div class="logo">
             <a href="https://www.instagram.com/byzeeva/"><img class="graphiclogo" src="mysite.png" alt="logo"></a>
@@ -62,8 +64,13 @@
                 </div>
             </div>  
         </div>
-           <div class="series"></div>
     </main>
-
+    <footer>
+        <nav>
+            <a href="https://www.instagram.com/byzeeva/"> INSTAGRAM</a>
+            <a href="https://vk.com/byzeeva">VK</a>
+            <a href="https://github.com/byzeeva">GITHUB</a>
+        </nav>
+    </footer>
 
 </body>
