--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, min-height=device-height">
-    <!-- <meta name="viewport" content="width=device-width, user-scalable=yes"> -->
+    <meta name="viewport" content="width=device-width, user-scalable=yes">
     <link rel="stylesheet" href="index.css">
     <link rel="shortcut icon" href='icon.png'>
     <title>Unicorns</title>
     <style>
         body { 
             background: url(background.png); 
-            background-size:100%;
+            background-size: 100%;
             background-attachment: fixed;
         }
     </style>
@@ -21,28 +20,40 @@
        <div class='tag'>Unicorns with love</div>
     </header>
     <center><p>
-        <img src="Rainbow_Dash.png" width="250" height="250">
-        <span>Rainbow Dash</span>
-        <img src="Fluttershy.png" width="250" height="250"> 
-        <span>Fluttershy</span><br>
-        <img src="Applejack.png" width="250" height="250">
-        <span>AppleJack</span>
-        <img src="Рарити.png" width="250" height="250"> 
-        <span>Rarity</span><br>
-        <img src="пинкипай.png" width="250" height="250">
-        <span>Pinkie Pie</span>
-        <img src="искорка.png" width="250" height="250">
-        <span>Twilight Sparkle</span>
+        <div class=parent>
+          <img src="Rainbow_Dash.png" width="250" height="250">
+          <span >Rainbow Dash</span>
+        </div>
+        <div class=parent>
+            <img src="Fluttershy.png" width="250" height="250"> 
+            <span class='text'>Fluttershy</span>
+        </div>
+        <div class=parent>
+            <img src="Applejack.png" width="250" height="250">
+            <span class='text'>AppleJack</span>
+        </div>
+        <div class=parent>
+            <img src="Рарити.png" width="250" height="250"> 
+            <span class='text'>Rarity</span>
+        </div>
+        <div class=parent>
+            <img src="пинкипай.png" width="250" height="250">
+            <span class='text'>Pinkie Pie</span>
+        </div>
+        <div class=parent>
+            <img src="искорка.png" width="250" height="250">
+            <span class='text'>Twilight Sparkle</span>
+        </div> 
     </p></center>
     <footer>
-       <div>
+       <div class='url'>
            <center><a href="https://vk.com/gus_rabotyaga" target="_blank">
               <img src="VK.png" width="30" height="30">
            </a>
            <a href="https://www.instagram.com/gus.rabotyaga/" target="_blank">
              <img src="Instagram.png" width="30" height="30">
            </a>
-           <a class='icon' href="https://github.com/john190703" target="_blank">
+           <a href="https://github.com/john190703" target="_blank">
              <img src="github.png" width="30" height="30">
            </a>
            <a href="https://t.me/Span9ly" target="_blank">
