--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, min-height=device-height">
-    <!-- <meta name="viewport" content="width=device-width, user-scalable=yes"> -->
+    <meta name="viewport" content="width=device-width, user-scalable=yes">
     <link rel="stylesheet" href="index.css">
     <link rel="shortcut icon" href='icon.png'>
     <title>Unicorns</title>
