--- a/index.html
+++ b/index.html
@@ -5,16 +5,15 @@
     <title>DAMAGEшка</title>
     <link rel = "stylesheet" href = "style.css">
 </head>
-<body style = "background:rgba(121, 143, 218, 0.452);">
+<body>
     <header>
-        <img src="pics/domashka.png" id="logo">
-        <div id = "title">doma.shhka</div>
+        <img src="pics/domashka.png" id="logo" align="left">
+        <span id = "title">doma.shhka</span>
         <nav>
-            <ul>
-                <li>Ничего обо мне</li> 
-                <li>Ничего не умею </li>
-                <li>Ничем не занимаюсь</li>
-            </ul>
+            ничего не умею
+            ничем не занимаюсь
+            никаких контактов
+            люблю шрэка
         </nav>
     </header>
     <section>
