--- a/index3.html
+++ b/index3.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8" />  
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>My Company</title>
   <header>
     
@@ -12,6 +13,7 @@
 
 </header>
 <link href="style.css" rel="stylesheet" type="text/css">
+
 
 
 </head>
