--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>ugH</title>
-    <link rel="stylesheet" href="C:\Users\лиза\Desktop\website\style.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/262e20d24e.js" crossorigin="anonymous"></script>
   </head>
 
