добавлена шапка, подключен css

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello World</h1>
+    <header>
+        <div class='di-header'>
+            <img src="https://lh3.googleusercontent.com/proxy/jN2YcuYtIjivTThIpluXDetFIpZBr50IxQjQZn582HaG_X4EkVijRazL0kYwzBYzNaNQbpPZH0NLghEGeJZGo_BHXGjyFOaoMA" class="logo" align="left">
+            <h1 class='header-title'>Название сайта</h1>
+          </div>
+    </header>
 </body>
 </html>
