сделан футер, добавлен элемент див для осноовной части

--- a/index.html
+++ b/index.html
@@ -13,5 +13,14 @@
             <h1 class='header-title'>Название сайта</h1>
           </div>
     </header>
+    <div class='content'></div>
+    <footer class='footer'>
+        <div>
+            <h4 class='footer-t' align="left">Контакты:</h4>
+            <p class='footer-c'align="left">Vk: <a href="https://vk.com/k.mikhaylets_005">@k.mikhaylets_005@vk.com</a></p><br>
+            <p class='footer-c'align="left">instagram:<a href="https://instagram.com/_kirill_mih?r=nametag">@_kirill_mih</a></p><br>
+            <p class='footer-c'align="left">telegram:<a href="https://t.me/kirill_mih">@kirill_mih</a></p>
+        </div>
+    </footer>
 </body>
 </html>
