--- a/index.html
+++ b/index.html
@@ -13,7 +13,16 @@
             <h1 class='header-title'>Название сайта</h1>
           </div>
     </header>
-    <div class='content'></div>
+    <div class='content'>
+        <section class="s-content">
+            <img class='card'src='https://i.pinimg.com/474x/86/df/9f/86df9f89ea6fb42b4655036db001f717.jpg'>
+            <h3 class='card-title'>Здесь могут быть любые картинки</h3>
+            <p class='card-text'>Можно добавить описание, но его здесь нет</p>
+        </section>
+        <p class='o-text'>Также здесь может быть основной текст, но его здесь тоже нет.</p>
+        <p class='o-text'>Но ниже будет представлен отрывок:</p><br>
+        <p class='o-text'>2018 год, Хэллоуин. Лори Строуд, её дочь Карен и внучка Эллисон заманили Майкла Майерса в ловушку и оставили гореть в подвале своего дома. Раненая Лори отправляется в больницу, но Майклу удаётся выбраться и продолжить кровавую расправу над жителями Хэддонфилда. В этот раз весь город решает дать отпор неудержимому монстру. Эллисон присоединяется к группе горожан, которые хотят взять правосудие в свои руки, выследить Майкла и остановить его раз и навсегда. Зло должно умереть сегодня.</p>
+    </div>
     <footer class='footer'>
         <div>
             <h4 class='footer-t' align="left">Контакты:</h4>
